syntax = "proto3";
package taxi.communication.joinService;

message JoinMsg{
  string id = 1;
  string ip = 2;
  int32 port = 3;
}

message JoinOk{}

service JoinService{
  rpc join (JoinMsg) returns (JoinOk);
}